# ra-cuda-reduce

./: CMakeLists.txt  Makefile  README.md  main.py  pyproject.toml  setup.py
cured/: __init__.py  reduce.py
cured/backend/: bindings.cpp  common.h  reduce.cu  reduce.h
tests/: test_ra_row_wise_reduce.py
